# FridaWars-1-Template

./: README.md  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/androidTest/java/com/secret/fridawars/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  secret.c
app/src/main/java/com/secret/fridawars/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/secret/fridawars/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
